--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
     "eslint-plugin-prettier": "^3.1.2",
     "jest": "^25.2.4",
     "lerna-changelog": "^1.0.1",
-    "prettier": "^1.19.1"
+    "prettier": "^1.19.1",
+    "@babel/plugin-proposal-class-properties": "^7.7.4",
+    "@babel/plugin-proposal-decorators": "^7.7.4"
   },
   "jest": {
     "testEnvironment": "node"
