--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   ],
   "dependencies": {
     "@ember-data/rfc395-data": "^0.0.4",
+    "@babel/plugin-proposal-decorators": "^7.7.4",
     "codemod-cli": "^2.1.0"
   },
   "devDependencies": {
